# ultrastarParser

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml  run_tests.yaml
src/ultrastarparser/: __init__.py  io.py  library.py  song.py  transform_funcs.py  versions.py
tests/: 4 Non Blondes - What's Up.txt  ABBA - Dancing Queen.txt  __init__.py  test_ultrastarfile.py
tests/resources/: ABBA - Dancing Queen.txt
ultrastarParser/: __init__.py  _library.py  _ultrastarfile.py  file.py  library.py  usdx_format.py
