[tool.poetry]
name = "ultrastarParser"
version = "0.6.7"
description = "Parser for Ultrastar text files."
authors = [
    "randompersona1 <74961116+randompersona1@users.noreply.github.com>"
]
readme = "README.md"
license = "MIT"
keywords = ["ultrastar", "parser", "karaoke"]
homepage = "https://github.com/randompersona1/ultrastarParser"
packages = [{include = "ultrastarparser", from="src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.32.3"
tinytag = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
